내/외과 근처 병원 조회

--- a/ai_project/src/main/resources/application.properties
+++ b/ai_project/src/main/resources/application.properties
@@ -17,3 +17,4 @@ server.tomcat.max-http-form-post-size=2000MB
 #spring.web.resources.static-locations=file:./files/
 #
 #spring.resources.static-locations=classpath:/static/
+kakao.restApiKey=3d110650cbc7ad58dd9cab786232f4f0
