내과CSS작업 및 AI 추가 외과 CSS 변경

--- a/ai_project/src/main/resources/application.properties
+++ b/ai_project/src/main/resources/application.properties
@@ -17,3 +17,6 @@ server.tomcat.max-http-form-post-size=2000MB
 #spring.web.resources.static-locations=file:./files/
 #
 #spring.resources.static-locations=classpath:/static/
+
+# ?? ?? AI API? URL? ?????.
+ai.api.url=http://localhost:8000/diagnose
